@@ -432,7 +432,12 @@ void StopSfx(std::string Alias)
 void StartMusic(int A, int fadeInMs)
 {
     if(noSound)
+    {
+        // Keep world map music being remembered when sound disabled
+        if(LevelSelect && !GameMenu && !GameOutro)
+            curWorldMusic = A;
         return;
+    }
 
     if(LevelSelect && !GameMenu && !GameOutro) // music on the world map
     {
